<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@color/yellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/car"
            android:contentDescription="@string/imgDesc"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/bungee"
            android:text="mechanic Sign In"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSign"
            android:textSize="25sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginStart="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editMecLogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittextsignin_shape"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10sp"
            android:hint="@string/ediHintEmail"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:textColor="#ffffff"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editMecLogPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextsignin_shape"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10sp"
            android:hint="@string/ediHintPass"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMecLogSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Mechanic SignIn"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMecForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:fontFamily="@font/bigshot_one"
            android:text="@string/txtForPass"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>



<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_margin="20dp">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/allerta_stencil"-->
<!--            android:text="@string/txtDonAcc"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:layout_marginStart="30dp"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/txtSignup"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/txtSinUP"-->
<!--            android:textColor="#FF5722"-->
<!--            android:textSize="22sp"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginStart="5dp"/>-->

<!--    </LinearLayout>-->


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="2">-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Admin Login"-->
<!--            android:textAllCaps="false"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Mechanic Login"-->
<!--            android:textAllCaps="false"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold" />-->


<!--    </LinearLayout>-->



    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/app_name"-->
    <!--            android:textStyle="bold"-->
    <!--            android:textColor="#050504"-->
    <!--            android:textSize="20sp" />-->

    <!--    </LinearLayout>-->

</LinearLayout>