<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@color/yellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/car"
            android:contentDescription="@string/imgDesc"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="Admin Sign In"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSign"
            android:textSize="25sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginStart="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTxtAdminEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittextsignin_shape"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10sp"
            android:hint="Enter Admin Email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:textColor="#ffffff"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittextsignin_shape"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10sp"
            android:hint="@string/ediHintPass"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdminSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="Admin SignIn"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:id="@+id/txtForgetPass"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="235dp"-->
<!--            android:fontFamily="@font/bigshot_one"-->
<!--            android:text="@string/txtForPass"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="italic" />-->

    </LinearLayout>



</LinearLayout>